--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "liuyuanjun/yii2-softdelete": "^1.0",
         "bizley/quill": "^3.3",
         "npm-asset/quill": "1.3",
-        "denkorolkov/yii2-ajaxcrud-bs5": "@dev"
+        "denkorolkov/yii2-ajaxcrud-bs5": "@dev",
+        "nickcv/yii2-encrypter": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
