--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "bizley/quill": "^3.3",
         "npm-asset/quill": "1.3",
         "denkorolkov/yii2-ajaxcrud-bs5": "@dev",
-        "nickcv/yii2-encrypter": "*"
+        "nickcv/yii2-encrypter": "*",
+        "sjaakp/yii2-spatial": "*",
+        "sjaakp/yii2-locator": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
